# LoukShop

./: carts.json  orders.json  products.json  pyproject.toml
accounts/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
accounts/locale/fa/LC_MESSAGES/: django.mo  django.po
accounts/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_alter_user_phone.py  0004_alter_user_phone.py  0005_alter_user_email.py  0006_alter_user_email_alter_user_phone.py  0007_resetpassword.py  0008_alter_resetpassword_token.py  0009_alter_resetpassword_token.py  0010_alter_resetpassword_email_alter_resetpassword_token.py
accounts/tests/: test_urls.py
base/: settings.py  urls.py
locale/fa/LC_MESSAGES/: django.po
payment/: apps.py  views.py
products/: admin.py  apps.py  serializers.py  signals.py  translation.py  urls.py  views.py
products/locale/fa/LC_MESSAGES/: django.mo  django.po
products/migrations/: 0001_initial.py  0002_remove_productvariant_variation.py  0003_productvariant_variation.py  0004_alter_productvariant_variation.py  0005_alter_cart_options.py  0006_alter_cartitem_options.py
products/models/: __init__.py  cart_models.py  order_models.py  product_models.py
products/tests/: test_models.py  test_serializers.py  test_urls.py  test_views.py
pyment/: apps.py
utils/: exception.py  filters.py  renderers.py
